--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,4 +1,7 @@
 <h1>ALL EMPLOYEES</h1>
+<head>
+   <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+</head>
 <table border =1>
     <tr>
       <td>Employee ID</td>
@@ -12,6 +15,14 @@
       <td>{{employee[1]}}</td>
       <td>{{employee[2]}}</td>
       <td>{{employee[3]}}</td>
+      <td>
+      <form method="POST" action="/rem_employee" onsubmit="return confirm('Are you sure you wanna delete??');">
+      <input type="hidden" value="{{employee[0]}}" name="e_id">
+      <button type="submit" class="btn btn large" value="{{employee[0]}}" name="e_id">
+      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+      </button>
+      </form>
+      </td>
     </tr>
     {% endfor %}
 </table>
