--- a/templates/Add_employee.html
+++ b/templates/Add_employee.html
@@ -1,12 +1,25 @@
-<h1>ADD EMPLOYEE</h1>
-<form method="POST" action="">
-	Employee ID <input type="text" placeholder="Cool cool cool cool" name="e_id" required="required" />
-	<br>
-	Employee name <input type="text" placeholder="Cool cool cool cool" name="e_name" required="required" />
-	<br>
-	Department <input type="text" placeholder="Cool cool cool cool " name="dept" required="required" />
-	<br>
-	Role <input type="text" placeholder="Cool cool cool cool" name="role" required="required"/>
-	<br>
-	<input type="submit">
-</form>
+<head>
+	<link rel="stylesheet" href="./styles.css">
+</head>
+<div class="content">
+	<h1>ADD EMPLOYEEs</h1>
+	<form method="POST" action="">
+		<label for="fname">Employee ID </label>
+		<br>
+		<input type="text" placeholder="Cool cool cool cool" name="e_id" required="required" />
+		<br>
+		<label for="fname">Employee name </label>
+		<br>
+		<input type="text" placeholder="Cool cool cool cool" name="e_name" required="required" />
+		<br>
+		<label for="fname">Department </label>
+		<br>
+		<input type="text" placeholder="Cool cool cool cool " name="dept" required="required" />
+		<br>
+		<label for="fname">Role</label>
+		<br>
+		<input type="text" placeholder="Cool cool cool cool" name="role" required="required"/>
+		<br>
+		<input type="submit">
+	</form>
+</div>
