--- a/templates/Add_package.html
+++ b/templates/Add_package.html
@@ -1,16 +1,33 @@
-<h1>ADD PACKAGE</h1>
-<form method="POST" action="">
-	Package ID <input type="text" placeholder="Enter an integer value " name="p_id" required="required" />
-	<br>
-	Package name <input type="text" placeholder="Cool cool cool cool" name="p_name" required="required" />
-	<br>
-	Days <input type="text" placeholder="Enter an integer value " name="days" required="required" />
-	<br>
-	Destination <input type="text" placeholder="Cool cool cool cool" name="destination" required="required"/>
-	<br>
-	Price <input type="text" placeholder="Enter an integer value " name="price" required="required"/>
-	<br>
-	Employee Incharge ID <input type="text" placeholder="Enter an integer value "name="e_id" required="required"/>
-	<br>
-	<input type="submit">
-</form>
+<head>
+	<link rel="stylesheet" href="./styles.css">
+</head>
+<div class="content">
+	<h1>ADD PACKAGE</h1>
+	<form method="POST" action="">
+		<label for="fname">Package ID </label>
+		<br>
+		<input type="text" placeholder="Enter an integer value " name="p_id" required="required" />
+		<br>
+		<label for="fname">Package name  </label>
+		<br>
+		<input type="text" placeholder="Cool cool cool cool" name="p_name" required="required" />
+		<br>
+		<label for="fname">Days </label>
+		<br>
+		<input type="text" placeholder="Enter an integer value " name="days" required="required" />
+		<br>
+		<label for="fname">Destination</label>
+		<br>
+		<input type="text" placeholder="Cool cool cool cool" name="destination" required="required"/>
+		<br>
+		<label for="fname">Price</label>
+		<br>
+		<input type="text" placeholder="Enter an integer value" price="price" required="required"/>
+		<br>
+		<label for="fname">Employee Incharge ID</label>
+		<br>
+		<input type="text" placeholder="Enter an integer value" name="e_id" required="required"/>
+		<br>
+		<input type="submit">
+	</form>
+</div>
