--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,33 +1,9 @@
-<style>
-  #customers {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-
-  #customers td, #customers th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
-
-  #customers tr:hover {background-color: #ddd;}
-
-  #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: rgb(92, 59, 75);;
-    color: white;
-  }
-</style>
-
 <h1>ALL EMPLOYEES</h1>
 <head>
    <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+   <link rel="stylesheet" href="./styles.css">
 </head>
-<table border =1 id="customers">
+<table border =1 class="customers">
     <tr>
       <th>Employee ID</th>
       <th>Employee name</th>
