--- a/templates/Update_package.html
+++ b/templates/Update_package.html
@@ -1,8 +1,17 @@
-<h1>UPDATE PACKAGE COST</h1>
-<form method="POST" action="">
-	Package ID <input type="text" placeholder="Enter an integer value " name="p_id" required="required" />
-	<br>
-    New Cost <input type="text" placeholder="Enter an integer value " name="price" required="required" />
-	<br>
-	<input type="submit">
-</form>
+<head>
+	<link rel="stylesheet" href="./styles.css">
+</head>
+<div class="content">
+	<h1>UPDATE PACKAGE COST</h1>
+	<form method="POST" action="">
+		<label for="fname">Package ID</label>
+		<br>
+		<input type="text" placeholder="Enter an integer value " name="p_id" required="required" />
+		<br> 
+		<label for="fname">New Cost </label>
+		<br>
+		<input type="text" placeholder="Enter an integer value " name="price" required="required" />
+		<br>
+		<input type="submit">
+	</form>
+</div>
