--- a/templates/styles.css
+++ b/templates/styles.css
@@ -18,10 +18,11 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: rgb(92, 59, 75);;
+    background-color: rgb(92, 59, 75);
     color: white;
   }
 
+/*form*/
 	input[type=text], select {
 	  width:600px;
 	  padding: 12px 20px;
@@ -51,4 +52,25 @@
 	  border-radius: 5px;
 	  background-color: #f2f2f2;
 	  padding: 20px;
+  }
+/*add button*/
+  .button {
+	background-color: rgb(92, 59, 75); /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	-webkit-transition-duration: 0.4s; /* Safari */
+	transition-duration: 0.4s;
+	border-radius: 30px 30px 30px 30px;	
+	margin-left: 40%;
+	margin-right: 30%;
+  }
+  .button1:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
   }
