--- a/templates/employees.html
+++ b/templates/employees.html
@@ -27,4 +27,5 @@
     </tr>
     {% endfor %}
 </table>
-<button class="button button1">Add Employee</button>
+<button class="button button1" style="	margin-left: 40%;
+margin-right: 30%;">Add Employee</button>
