--- a/templates/packages.html
+++ b/templates/packages.html
@@ -31,3 +31,5 @@
     </tr>
     {% endfor %}
 </table>
+<button class="button button1">Add Package</button>
+<button class="button button2">Update Package</button>
