--- a/templates/styles.css
+++ b/templates/styles.css
@@ -68,9 +68,13 @@
 	-webkit-transition-duration: 0.4s; /* Safari */
 	transition-duration: 0.4s;
 	border-radius: 30px 30px 30px 30px;	
-	margin-left: 40%;
-	margin-right: 30%;
   }
-  .button1:hover {
+  .button1{
+	margin-left: 35%;
+  }
+  .button1:hover{
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+  .button2:hover{
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
   }
