--- a/templates/employees.html
+++ b/templates/employees.html
@@ -27,5 +27,10 @@
     </tr>
     {% endfor %}
 </table>
-<button class="button button1" style="	margin-left: 40%;
-margin-right: 30%;">Add Employee</button>
+
+
+<a href="Add_employee.html">
+  <button class="button button1" 
+  style="	margin-left: 40%; margin-right: 30%;">Add Employee
+  </button>
+</a>
