--- a/templates/packages.html
+++ b/templates/packages.html
@@ -31,5 +31,6 @@
     </tr>
     {% endfor %}
 </table>
-<button class="button button1">Add Package</button>
-<button class="button button2">Update Package</button>
+<a href="Add_package.html"><button class="button button1">Add Package</button></a>
+<a href="Update_package.html"><button class="button button2">Update Package</button></a>
+
