--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -50,8 +50,17 @@
             </div>
           </div>
         </div>
-
-      </div>     
+        <div class="col-sm-3 mb-3">
+          <div class="card text-center rounded-circle col">
+            <div class="card-body">
+              <h5 class="card-title">Employees</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="employees.html" class="btn btn-outline-dark">Show Table</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    
   </div>
 </body>
 </html>
