--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -60,7 +60,27 @@
           </div>
         </div>
       </div>
-    
+      <div class="row mb-3 d-flex justify-content-center col" >
+        <div class="col-sm-3 mb-3">
+          <div class="card text-center rounded-circle col">
+            <div class="card-body">
+              <h5 class="card-title">Bookings</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="bookings.html" class="btn btn-outline-dark">Show Table</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="card text-center rounded-circle col">
+            <div class="card-body">
+              <h5 class="card-title">Users</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="users.html" class="btn btn-outline-dark">Show Table</a>
+            </div>
+          </div>
+        </div>
+
+      </div>     
   </div>
 </body>
 </html>
