--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -79,7 +79,15 @@
             </div>
           </div>
         </div>
-
+        <div class="col-sm-3 mb-3">
+          <div class="card text-center rounded-circle col">
+            <div class="card-body">
+              <h5 class="card-title">Enquiries</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="enquiries.html" class="btn btn-outline-dark">Show Table</a>
+            </div>
+          </div>
+        </div>
       </div>     
   </div>
 </body>
