--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,4 +1,5 @@
 
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700");  
   .customers {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
