--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,6 +1,16 @@
 
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");  
 /*homepage styling*/
+
+
+:root {
+  --primaryColor: #f09d51;/*setting variables syntax*/
+  --mainWhite: rgb(216, 154, 206);
+  --mainBlack: #222;
+  --mainGrey: #ececec;
+  --mainSpacing: 0.1rem;
+  --mainTransition: all 0.3s linear;
+}
 * {
     margin: 0;
     padding: 0;
@@ -11,17 +21,24 @@
     font-family: "Lato", sans-serif;
     background-color: rgb(92, 59, 75);
 }
-.clas {
-    background: rgb(92, 59, 75);
-  }
 .start{
     margin-top: 3rem;    
+}
+.card-body{
+	background:transparent;
 }
 .col:first-child{
     background: rgb(240, 194, 147);
 }
+.col, .row, .col-sm-3, .clas {
+	background: rgb(92, 59, 75);
+}
 .navbar:first-child{
     background: rgb(153, 109, 131);
+}
+.navbar-collapse{
+	background: transparent;
+	height: 10px;
 }
 /*homepage styling ends*/
 
