--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>Tour Management</title>
 
-        <link rel="stylesheet" href="styles.css">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!--      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
@@ -21,26 +21,26 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <a class="navbar-brand" href="#">TourWithUs</a>
             <!--
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">              
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
               </ul>
-            -->       
+            -->
             <!--
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
             </form>-->
           </div>
-          
+
             <ul class="nav navbar-nav navbar-right">
               <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
-            </ul>          
-        </nav> 
-    <div class="clas">  
+            </ul>
+        </nav>
+    <div class="clas">
         <div class="start row mb-3 d-flex justify-content-center">
           <div class="col-sm-3 mb-3">
             <div class="card text-center rounded-circle col">
@@ -90,8 +90,8 @@
             </div>
           </div>
 
-        </div>     
-    
+        </div>
+
     </div>
 </body>
 </html>
