--- a/templates/Add_employee.html
+++ b/templates/Add_employee.html
@@ -1,5 +1,5 @@
 <head>
-	<link rel="stylesheet" href="./styles.css">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
 <div class="content">
 	<h1>ADD EMPLOYEEs</h1>
