--- a/templates/packages.html
+++ b/templates/packages.html
@@ -1,6 +1,6 @@
 <h1>ALL PACKAGES</h1>
 <head>
-    <link rel="stylesheet" href="./styles.css">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
    <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <table border =1 class="customers">
