--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,6 @@
 <h1>ALL USERS</h1>
 <head>
-  <link rel="stylesheet" href="./styles.css">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
 <table border =1 class="customers">
     <tr>
