--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -1,4 +1,4 @@
-<h1>ALL BOOKINGS</h1>
+<h1 style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL BOOKINGS</h1>
 <head>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
