--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -42,10 +42,18 @@
 }
 /*homepage styling ends*/
 
+/*table styling*/
+.headings{
+	text-align: center; 
+	background-color: #fcf8e3; 
+	border-radius:30px; 
+	padding: 20px; 
+}
 .customers {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+	margin-left: auto;
+	margin-right: auto;
   }
 
   .customers td, .customers th {
