--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -101,8 +101,8 @@
 	
 	div {
 	  border-radius: 5px;
-	  background-color: #f2f2f2;
-	  padding: 20px;
+	  background-color: #fcf8e3;
+	  padding: 20px 40px;
   }
 /*add button*/
   .button {
