--- a/templates/Add_employee.html
+++ b/templates/Add_employee.html
@@ -1,8 +1,10 @@
 <head>
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+		<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
 <div class="content">
-	<h1>ADD EMPLOYEEs</h1>
+	<h1>ADD EMPLOYEE</h1>
+	<br>
+	<br>
 	<form method="POST" action="">
 		<label for="fname">Employee ID </label>
 		<br>
