--- a/templates/Add_package.html
+++ b/templates/Add_package.html
@@ -2,7 +2,7 @@
 		<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
 <div class="content">
-	<h1>ADD PACKAGE</h1>
+	<h1 class="headings">ADD PACKAGE</h1>
 	<br>
 	<br>
 	<form method="POST" action="">
