--- a/templates/Update_package.html
+++ b/templates/Update_package.html
@@ -2,7 +2,9 @@
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
 <div class="content">
-	<h1>UPDATE PACKAGE COST</h1>
+	<h1 class="headings">UPDATE PACKAGE COST</h1>
+	<br>
+	<br>
 	<form method="POST" action="">
 		<label for="fname">Package ID</label>
 		<br>
