--- a/templates/packages.html
+++ b/templates/packages.html
@@ -1,8 +1,8 @@
-<h1>ALL PACKAGES</h1>
 <head>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
    <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
+<h1 class="headings">ALL PACKAGES</h1>
 <table border =1 class="customers">
     <tr>
       <th>Package ID</th>
