--- a/templates/users.html
+++ b/templates/users.html
@@ -1,7 +1,7 @@
-<h1>ALL USERS</h1>
 <head>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
+<h1 class="headings">ALL USERS</h1>
 <table border =1 class="customers">
     <tr>
       <th>User ID</th>
