--- a/templates/enquiries.html
+++ b/templates/enquiries.html
@@ -1,7 +1,7 @@
-<h1>ALL ENQUIRIES</h1>
 <head>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
 </head>
+<h1 class="headings">ALL ENQUIRIES</h1>
 <table border =1 class="customers">
     <tr>
       <th>Enquiry ID</th>
