--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,6 +1,61 @@
 <head>
    <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+   <style>
+    .headings{
+      text-align: center; 
+      background-color: #fcf8e3; 
+      border-radius:30px; 
+      padding: 20px; 
+    }
+    .customers {
+        font-family: Arial, Helvetica, sans-serif;
+        border-collapse: collapse;
+      margin-left: auto;
+      margin-right: auto;
+      }
+    
+      .customers td, .customers th {
+        border: 1px solid #ddd;
+        padding: 8px;
+      }
+    
+      .customers tr:nth-child(even){background-color: #f2f2f2;}
+    
+      .customers tr:hover {background-color: #ddd;}
+    
+      .customers th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: rgb(92, 59, 75);
+        color: white;
+      }
+      .button {
+        background-color: rgb(92, 59, 75); /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.4s;
+        border-radius: 30px 30px 30px 30px;	
+        }
+        .button1{
+        margin-left: 35%;
+        }
+        .button1:hover{
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+        }
+        .button2:hover{
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+        }
+   </style>
 </head>
 <h1 class="headings" style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL EMPLOYEES</h1>
 <table border =1 class="customers">
