--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -35,7 +35,7 @@
 
 .start{
     /*margin-top: 3rem;   */
-    padding-top: 30px; 
+    padding-top: 50px; 
    
 }
 .card-body{
@@ -45,34 +45,33 @@
 .col:first-child{
     /*background: rgb(240, 194, 147);*/
     /*background: #d4b4a8;*/
-    /*background: #e44c65; pink*/ 
-    background: #4b3842;
-}
-
-.col, .row, .col-sm-3, .clas {
-  /*background: rgb(92, 59, 75);*/
-  /*background: #f3f3f3a7;*/
-  /*background: #222;*/
-  
+    /*background: #e44c65; pink */
+    /*background: #312d2e;*/
+    background: #222;
+    opacity: 0.8;
+    
 }
 .clas{
   padding-bottom: 200px;
-  background-image: url("bg3.jpg");
-  background-repeat: no-repeat;
-  background-size:cover;
+
 }
 .navbar:first-child{
     /*background: rgb(153, 109, 131);*/
     /*background: #045e93;*/
     background: #222;
+    opacity: 0.8;
 }
-
+.bg{
+  background-image: url("bg2.jpg");
+  background-repeat: no-repeat;
+  background-size:cover;
+}
 
    </style>
     </head>
 <body>
-
-        <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark static-top">
+<div class="bg">
+        <nav class="navbar transparent navbar-fixed-top navbar-expand-lg navbar-dark static-top">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -167,5 +166,6 @@
         </div>
 
     </div>
+  </div>
 </body>
 </html>
