--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -66,6 +66,11 @@
   background-repeat: no-repeat;
   background-size:cover;
 }
+.card:hover{
+  color: rgba(255, 255, 255, 1);
+  /*box-shadow: 0 15px 15px rgba(0,0,0, .8);*/
+  box-shadow: 0 15px 15px rgba(255,255,255,0.8);
+}
 
    </style>
     </head>
