--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -4,42 +4,62 @@
 
 
 :root {
-  --primaryColor: #f09d51;/*setting variables syntax*/
-  --mainWhite: rgb(216, 154, 206);
-  --mainBlack: #222;
-  --mainGrey: #ececec;
-  --mainSpacing: 0.1rem;
-  --mainTransition: all 0.3s linear;
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; /*element wont get bigger*/
-}
-.body {
-    color: var(--mainBlack);
-    font-family: "Lato", sans-serif;
-    background-color: rgb(92, 59, 75);
-}
-.start{
-    margin-top: 3rem;    
-}
-.card-body{
+	--primaryColor: #f09d51;/*setting variables syntax*/
+	--mainWhite: rgb(216, 154, 206);
+	--mainBlack: #222;
+	--mainGrey: #ececec;
+	--mainSpacing: 0.1rem;
+	--mainTransition: all 0.3s linear;
+  }
+  * {
+	  margin: 0;
+	  padding: 0;
+	  box-sizing: border-box; /*element wont get bigger*/
+  }
+  .body {
+	  color: var(--mainBlack);
+	  font-family: "Lato", sans-serif;
+  
+  }
+  
+  .start{
+	  /*margin-top: 3rem;   */
+	  padding-top: 50px; 
+	 
+  }
+  .card-body{
 	background:transparent;
-}
-.col:first-child{
-    background: rgb(240, 194, 147);
-}
-.col, .row, .col-sm-3, .clas {
-	background: rgb(92, 59, 75);
-}
-.navbar:first-child{
-    background: rgb(153, 109, 131);
-}
-.navbar-collapse{
-	background: transparent;
-	height: 10px;
-}
+	color: #ececec;
+  }
+  .col:first-child{
+	  /*background: rgb(240, 194, 147);*/
+	  /*background: #d4b4a8;*/
+	  /*background: #e44c65; pink */
+	  /*background: #312d2e;*/
+	  background: #222;
+	  opacity: 0.8;
+	  
+  }
+  .clas{
+	padding-bottom: 200px;
+  
+  }
+  .navbar:first-child{
+	  /*background: rgb(153, 109, 131);*/
+	  /*background: #045e93;*/
+	  background: #222;
+	  opacity: 0.8;
+  }
+  .bg{
+	background-image: url("bg2.jpg");
+	background-repeat: no-repeat;
+	background-size:cover;
+  }
+  .card:hover{
+	color: rgba(255, 255, 255, 1);
+	/*box-shadow: 0 15px 15px rgba(0,0,0, .8);*/
+	box-shadow: 0 15px 15px rgba(255,255,255,0.8);
+  }
 /*homepage styling ends*/
 
 /*table styling*/
