--- a/templates/Add_package.html
+++ b/templates/Add_package.html
@@ -24,7 +24,7 @@
 		<br>
 		<label for="fname">Price</label>
 		<br>
-		<input type="text" placeholder="Enter an integer value" price="price" required="required"/>
+		<input type="text" placeholder="Enter an integer value" name="price" required="required"/>
 		<br>
 		<label for="fname">Employee Incharge ID</label>
 		<br>
