--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,91 +1,195 @@
 <head>
-   <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
-   <style>
-    .headings{
-      text-align: center; 
-      background-color: #fcf8e3; 
-      border-radius:30px; 
-      padding: 20px; 
+  <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+ <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<style>
+  .container-fluid:first-child{
+    font-size: 20px;
+    line-height: 1.5;
+  }
+  .nav2:first-child{
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 0;
+  }
+  :root {
+    --primaryColor: #f09d51;/*setting variables syntax*/
+    --mainWhite: rgb(216, 154, 206);
+    --mainBlack: #222;
+    --mainGrey: #ececec;
+    --mainSpacing: 0.1rem;
+    --mainTransition: all 0.3s linear;
+  }
+  * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box; /*element wont get bigger*/
+  }
+  .body {
+      color: var(--mainBlack);
+      font-family: "Lato", sans-serif;
+  
+  }
+  
+  .start{
+      /*margin-top: 3rem;   */
+      padding-top: 50px; 
+     
+  }
+  .card-body{
+    background:transparent;
+    color: #ececec;
+  }
+  .col:first-child{
+      background: #222;
+      opacity: 0.8;
+      
+  }
+  .clas{
+    padding-bottom: 200px;
+  
+  }
+  .navbar:first-child{
+      /*background: rgb(153, 109, 131);*/
+      /*background: #045e93;*/
+      background: #222;
+      opacity: 0.8;
+  }
+  .headings{
+    text-align: center; 
+    background-color: #fcf8e3; 
+    border-radius:30px; 
+    padding: 20px; 
+  }
+  .customers {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
     }
-    .customers {
-        font-family: Arial, Helvetica, sans-serif;
-        border-collapse: collapse;
-      margin-left: auto;
-      margin-right: auto;
+  
+    .customers td, .customers th {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
+  
+    .customers tr:nth-child(even){background-color: #f2f2f2;}
+  
+    .customers tr:hover {background-color: #ddd;}
+  
+    .customers th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: rgb(92, 59, 75);
+      color: white;
+    }
+    .button {
+      background-color: rgb(92, 59, 75); /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      -webkit-transition-duration: 0.4s; /* Safari */
+      transition-duration: 0.4s;
+      border-radius: 30px 30px 30px 30px;	
       }
-    
-      .customers td, .customers th {
-        border: 1px solid #ddd;
-        padding: 8px;
+      .button1{
+      margin-left: 35%;
       }
-    
-      .customers tr:nth-child(even){background-color: #f2f2f2;}
-    
-      .customers tr:hover {background-color: #ddd;}
-    
-      .customers th {
-        padding-top: 12px;
-        padding-bottom: 12px;
-        text-align: left;
-        background-color: rgb(92, 59, 75);
-        color: white;
+      .button1:hover{
+      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
       }
-      .button {
-        background-color: rgb(92, 59, 75); /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        -webkit-transition-duration: 0.4s; /* Safari */
-        transition-duration: 0.4s;
-        border-radius: 30px 30px 30px 30px;	
-        }
-        .button1{
-        margin-left: 35%;
-        }
-        .button1:hover{
-        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-        }
-        .button2:hover{
-        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-        }
-   </style>
+      .button2:hover{
+      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+      }
+      .bg{
+        background-image: url("bg2.jpg");
+        background-repeat: no-repeat;
+        background-size:cover;
+      }
+</style>
 </head>
-<h1 class="headings" style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL EMPLOYEES</h1>
-<table border =1 class="customers">
-    <tr>
-      <th>Employee ID</th>
-      <th>Employee name</th>
-      <th>Department</th>
-      <th>Role</th>
-    </tr>
-    {% for employee in employee_details %}
-    <tr>
-      <td>{{employee[0]}}</td>
-      <td>{{employee[1]}}</td>
-      <td>{{employee[2]}}</td>
-      <td>{{employee[3]}}</td>
-      <td>
-      <form method="POST" action="/rem_employee" onsubmit="return confirm('Are you sure you wanna delete??');">
-      <input type="hidden" value="{{employee[0]}}" name="e_id">
-      <button type="submit" class="btn btn large" value="{{employee[0]}}" name="e_id">
-      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-      </button>
-      </form>
-      </td>
-    </tr>
-    {% endfor %}
-</table>
+<body>
+<div class="bg">
+  <div class="container-fluid">
+    <div class="row min-vh-100 flex-column flex-md-row">
+        <aside class="col-12 col-md-2 p-0 bg-dark flex-shrink-1">
+            <nav class="navbar nav2 navbar-expand navbar-dark bg-dark flex-md-column flex-row align-items-start py-2">
+                <div class="collapse navbar-collapse ">
+                    <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+                        <li class="nav-item active">
+                            <a class="nav-link pl-0 text-nowrap" href="#"><i class="fa fa-bullseye fa-fw"></i> <span class="font-weight-bold">TourWithUs</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link pl-0" href="#"><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Home</span></a>
+                      </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href=http://localhost:5000/all_packages"><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Packages</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_employees"><i class="fa fa-cog fa-fw"></i> <span class="d-none d-md-inline">Employees</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_bookings"><i class="fa fa-heart codeply fa-fw"></i> <span class="d-none d-md-inline">Bookings</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_users"><i class="fa fa-star codeply fa-fw"></i> <span class="d-none d-md-inline">Users</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_enquiries"><i class="fa fa-star fa-fw"></i> <span class="d-none d-md-inline">Enquiries</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </aside>
+        <main class="col bg-faded py-3 flex-grow-1">
+            <h1 class="headings" style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL EMPLOYEES</h1>
+            <table border =1 class="customers">
+                <tr>
+                  <th>Employee ID</th>
+                  <th>Employee name</th>
+                  <th>Department</th>
+                  <th>Role</th>
+                </tr>
+                {% for employee in employee_details %}
+                <tr>
+                  <td>{{employee[0]}}</td>
+                  <td>{{employee[1]}}</td>
+                  <td>{{employee[2]}}</td>
+                  <td>{{employee[3]}}</td>
+                  <td>
+                  <form method="POST" action="/rem_employee" onsubmit="return confirm('Are you sure you wanna delete??');">
+                  <input type="hidden" value="{{employee[0]}}" name="e_id">
+                  <button type="submit" class="btn btn large" value="{{employee[0]}}" name="e_id">
+                  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                  </button>
+                  </form>
+                  </td>
+                </tr>
+                {% endfor %}
+            </table>
 
-<br>
-<a href="http://localhost:5000/add_employee">
-  <button class="button button1" 
-  style="	margin-left: 40%; margin-right: 30%;">Add Employee
-  </button>
-</a>
+            <br>
+            <a href="http://localhost:5000/add_employee">
+              <button class="button button1" 
+              style="	margin-left: 40%; margin-right: 30%;">Add Employee
+              </button>
+            </a>
+        </main>
+    </div>
+  </div>
+</div>
+</body>
