--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -71,6 +71,23 @@
   /*box-shadow: 0 15px 15px rgba(0,0,0, .8);*/
   box-shadow: 0 15px 15px rgba(255,255,255,0.8);
 }
+.glow{
+  text-shadow: 1px 1px 2px #faf7f7;
+}
+  /*-webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff;
+  }
+  
+  to {
+    text-shadow: 1px 1px 2px #faf7f7;
+  }
+}*/
 
    </style>
     </head>
@@ -82,7 +99,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <a class="navbar-brand" href="#">TourWithUs</a>
+            <a class="navbar-brand glow" href="#">TourWithUs</a>
             <!--
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
@@ -122,7 +139,7 @@
         <div class="start row mb-3 d-flex justify-content-center">
           <div class="col-lg-3 mb-3">
             <div class="card text-center rounded-circle col">
-              <div class="card-body">
+              <div class="card-body ">
                 <h5 class="card-title">Packages</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                 <a href="http://localhost:5000/all_packages" class="btn btn-outline-light">Show Table</a>
