--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -1,24 +1,72 @@
 <head>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<h1 class="headings" style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL BOOKINGS</h1>
-<table border =1 class="customers">
-    <tr>
-      <th>Booking ID</th>
-      <th>Booking date</th>
-      <th>Travel date</th>
-      <th>Price</th>
-      <th>Package ID</th>
-      <th>User ID</th>
-    </tr>
-    {% for booking in booking_details %}
-    <tr>
-      <td>{{booking[0]}}</td>
-      <td>{{booking[1]}}</td>
-      <td>{{booking[2]}}</td>
-      <td>{{booking[3]}}</td>
-      <td>{{booking[4]}}</td>
-      <td>{{booking[5]}}</td>
-    </tr>
-    {% endfor %}
-</table>
+
+<div class="bg">
+  <div class="container-fluid">
+    <div class="row min-vh-100 flex-column flex-md-row">
+        <aside class="col-12 col-md-2 p-0 bg-dark flex-shrink-1">
+            <nav class="navbar nav2 navbar-expand navbar-dark bg-dark flex-md-column flex-row align-items-start py-2">
+                <div class="collapse navbar-collapse ">
+                    <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+                        <li class="nav-item active">
+                            <a class="nav-link pl-0 text-nowrap" href="#"><i class="fa fa-bullseye fa-fw"></i> <span class="font-weight-bold">TourWithUs</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link pl-0" href="#"><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Home</span></a>
+                      </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href=http://localhost:5000/all_packages"><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Packages</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_employees"><i class="fa fa-cog fa-fw"></i> <span class="d-none d-md-inline">Employees</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_bookings"><i class="fa fa-heart codeply fa-fw"></i> <span class="d-none d-md-inline">Bookings</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_users"><i class="fa fa-star codeply fa-fw"></i> <span class="d-none d-md-inline">Users</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pl-0" href="http://localhost:5000/all_enquiries"><i class="fa fa-star fa-fw"></i> <span class="d-none d-md-inline">Enquiries</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </aside>
+        <main class="col bg-faded py-3 flex-grow-1">
+            <h1 class="headings" style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL BOOKINGS</h1>
+            <table border =1 class="customers">
+                <tr>
+                  <th>Booking ID</th>
+                  <th>Booking date</th>
+                  <th>Travel date</th>
+                  <th>Price</th>
+                  <th>Package ID</th>
+                  <th>User ID</th>
+                </tr>
+                {% for booking in booking_details %}
+                <tr>
+                  <td>{{booking[0]}}</td>
+                  <td>{{booking[1]}}</td>
+                  <td>{{booking[2]}}</td>
+                  <td>{{booking[3]}}</td>
+                  <td>{{booking[4]}}</td>
+                  <td>{{booking[5]}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+            <br>
+            <a href="http://localhost:5000/add_employee">
+              <button class="button button1" 
+              style="	margin-left: 40%; margin-right: 30%;">Add Employee
+              </button>
+            </a>
+        </main>
+    </div>
+  </div>
+</div>
