--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -62,7 +62,7 @@
     opacity: 0.8;
 }
 .bg{
-  background-image: url("bg2.jpg");
+  background-image: url("img/bg2.jpg");
   background-repeat: no-repeat;
   background-size:cover;
 }
