--- a/templates/employees.html
+++ b/templates/employees.html
@@ -71,8 +71,8 @@
   .customers {
       font-family: Arial, Helvetica, sans-serif;
       border-collapse: collapse;
-    margin-left: auto;
-    margin-right: auto;
+      margin-left: auto;
+      margin-right: auto;
     }
   
     .customers td, .customers th {
@@ -116,7 +116,12 @@
       box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
       }
       .bg{
-        background-image: url("bg2.jpg");
+        background-image: url("img/bg2.jpg");
+        background-repeat: no-repeat;
+        background-size:cover;
+      }
+      .bg{
+        background-image: url("img/bg2.jpg");
         background-repeat: no-repeat;
         background-size:cover;
       }
