final draft pt 2

--- a/templates/Add_package.html
+++ b/templates/Add_package.html
@@ -6,27 +6,27 @@
 	<br>
 	<br>
 	<form method="POST" action="">
-		<label for="fname">Package ID </label>
+		<label >Package ID </label>
 		<br>
 		<input type="text" placeholder="Enter an integer value " name="p_id" required="required" />
 		<br>
-		<label for="fname">Package name  </label>
+		<label >Package name  </label>
 		<br>
 		<input type="text" placeholder="Cool cool cool cool" name="p_name" required="required" />
 		<br>
-		<label for="fname">Days </label>
+		<label >Days </label>
 		<br>
 		<input type="text" placeholder="Enter an integer value " name="days" required="required" />
 		<br>
-		<label for="fname">Destination</label>
+		<label >Destination</label>
 		<br>
 		<input type="text" placeholder="Cool cool cool cool" name="destination" required="required"/>
 		<br>
-		<label for="fname">Price</label>
+		<label >Price</label>
 		<br>
 		<input type="text" placeholder="Enter an integer value" name="price" required="required"/>
 		<br>
-		<label for="fname">Employee Incharge ID</label>
+		<label >Employee Incharge ID</label>
 		<br>
 		<input type="text" placeholder="Enter an integer value" name="e_id" required="required"/>
 		<br>
