--- a/templates/Update_package.html
+++ b/templates/Update_package.html
@@ -6,11 +6,11 @@
 	<br>
 	<br>
 	<form method="POST" action="">
-		<label for="fname">Package ID</label>
+		<label >Package ID</label>
 		<br>
 		<input type="text" placeholder="Enter an integer value " name="p_id" required="required" />
 		<br> 
-		<label for="fname">New Cost </label>
+		<label >New Cost </label>
 		<br>
 		<input type="text" placeholder="Enter an integer value " name="price" required="required" />
 		<br>
