--- a/templates/Add_employee.html
+++ b/templates/Add_employee.html
@@ -6,19 +6,19 @@
 	<br>
 	<br>
 	<form method="POST" action="">
-		<label for="fname">Employee ID </label>
+		<label >Employee ID </label>
 		<br>
 		<input type="text" placeholder="Cool cool cool cool" name="e_id" required="required" />
 		<br>
-		<label for="fname">Employee name </label>
+		<label >Employee name </label>
 		<br>
 		<input type="text" placeholder="Cool cool cool cool" name="e_name" required="required" />
 		<br>
-		<label for="fname">Department </label>
+		<label >Department </label>
 		<br>
 		<input type="text" placeholder="Cool cool cool cool " name="dept" required="required" />
 		<br>
-		<label for="fname">Role</label>
+		<label >Role</label>
 		<br>
 		<input type="text" placeholder="Cool cool cool cool" name="role" required="required"/>
 		<br>
