--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -14,25 +14,25 @@
                 <div class="collapse navbar-collapse ">
                     <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
                         <li class="nav-item active">
-                            <a class="nav-link pl-0 text-nowrap" href="#"><i class="fa fa-bullseye fa-fw"></i> <span class="font-weight-bold">TourWithUs</span></a>
+                            <a class="nav-link pl-0 text-nowrap" href="#"> <span class="font-weight-bold">TourWithUs</span></a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link pl-0" href="#"><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Home</span></a>
+                        <li class="nav-item active">
+                          <a class="nav-link" href="#"> <span class="d-none d-md-inline">Home</span></a>
                       </li>                        
-                        <li class="nav-item">
-                            <a class="nav-link pl-0" href=http://localhost:5000/all_packages"><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Packages</span></a>
+                        <li class="nav-item active">
+                            <a class="nav-link " href="http://localhost:5000/all_packages"> <span class="d-none d-md-inline">Packages</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link pl-0" href="http://localhost:5000/all_employees"><i class="fa fa-cog fa-fw"></i> <span class="d-none d-md-inline">Employees</span></a>
+                        <li class="nav-item active">
+                            <a class="nav-link " href="http://localhost:5000/all_employees"> <span class="d-none d-md-inline">Employees</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link pl-0" href="http://localhost:5000/all_bookings"><i class="fa fa-heart codeply fa-fw"></i> <span class="d-none d-md-inline">Bookings</span></a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="http://localhost:5000/all_bookings"> <span class="d-none d-md-inline">Bookings</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link pl-0" href="http://localhost:5000/all_users"><i class="fa fa-star codeply fa-fw"></i> <span class="d-none d-md-inline">Users</span></a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="http://localhost:5000/all_users"> <span class="d-none d-md-inline">Users</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link pl-0" href="http://localhost:5000/all_enquiries"><i class="fa fa-star fa-fw"></i> <span class="d-none d-md-inline">Enquiries</span></a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="http://localhost:5000/all_enquiries"> <span class="d-none d-md-inline">Enquiries</span></a>
                         </li>
                     </ul>
                 </div>
