--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!--      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
+      <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
       <style>
 
@@ -141,7 +141,7 @@
             <div class="card text-center rounded-circle col">
               <div class="card-body ">
                 <h5 class="card-title">Packages</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Check out all the available packages here. You can add and update packages too!</p>
                 <a href="http://localhost:5000/all_packages" class="btn btn-outline-light">Show Table</a>
               </div>
             </div>
@@ -150,7 +150,7 @@
             <div class="card text-center rounded-circle col">
               <div class="card-body">
                 <h5 class="card-title">Employees</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">You can see the list of employees here. Hire or fire employees</p>
                 <a href="http://localhost:5000/all_employees" class="btn btn-outline-light">Show Table</a>
               </div>
             </div>
@@ -161,7 +161,7 @@
             <div class="card text-center rounded-circle col">
               <div class="card-body">
                 <h5 class="card-title">Bookings</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">List of all bookings is provided here.</p>
                 <a href="http://localhost:5000/all_bookings" class="btn btn-outline-light">Show Table</a>
               </div>
             </div>
@@ -170,7 +170,7 @@
             <div class="card text-center rounded-circle col">
               <div class="card-body">
                 <h5 class="card-title">Users</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Check out the list of users who have TouredwithUs.</p>
                 <a href="http://localhost:5000/all_users" class="btn btn-outline-light">Show Table</a>
               </div>
             </div>
@@ -179,7 +179,7 @@
             <div class="card text-center rounded-circle col">
               <div class="card-body">
                 <h5 class="card-title">Enquiries</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">List of enquiries is provided here.</p>
                 <a href="http://localhost:5000/all_enquiries" class="btn btn-outline-light">Show Table</a>
               </div>
             </div>
