--- a/templates/employees.html
+++ b/templates/employees.html
@@ -136,7 +136,7 @@
                 <div class="collapse navbar-collapse ">
                     <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
                         <li class="nav-item active">
-                            <a class="nav-link pl-0 text-nowrap" href="#"> <span class="font-weight-bold">TourWithUs</span></a>
+                            <a class="nav-link pl-0 text-nowrap glow" href="#"> <span class="font-weight-bold">TourWithUs</span></a>
                         </li>
                         <li class="nav-item active">
                           <a class="nav-link" href="#"> <span class="d-none d-md-inline">Home</span></a>
